# vtkMap

./: .clang-format  CMakeLists.txt  README.md  Timer.h  example.cpp  exampleLayers.cxx  main.cpp  vtkFeature.cxx  vtkFeature.h  vtkFeatureLayer.cxx  vtkFeatureLayer.h  vtkGDALRasterConverter.cxx  vtkGDALRasterConverter.h  vtkGDALRasterReprojection.cxx  vtkGDALRasterReprojection.h  vtkGeoJSONMapFeature.cxx  vtkGeoJSONMapFeature.h  vtkGeoMapFeatureSelector.cxx  vtkGeoMapFeatureSelector.h  vtkGeoMapLayerPass.cxx  vtkGeoMapLayerPass.h  vtkGeoMapSelection.cxx  vtkGeoMapSelection.h  vtkInteractorStyleGeoMap.cxx  vtkInteractorStyleGeoMap.h  vtkInteractorStyleMap.cxx  vtkInteractorStyleMap.h  vtkLayer.cxx  vtkLayer.h  vtkMap.cxx  vtkMap.h  vtkMapClusteredMarkerSet.cxx  vtkMapClusteredMarkerSet.h  vtkMapClusteredMarkerSource.cxx  vtkMapClusteredMarkerSource.h  vtkMapMarker.cxx  vtkMapMarker.h  vtkMapMarkerSet.cxx  vtkMapMarkerSet.h  vtkMapPickResult.cxx  (+19 more)
CMake/: vtkMapMacros.cmake
Qt/: CMakeLists.txt
Qt/weatherstations/: CMakeLists.txt  RenderWindowNoUiFile.cxx  StationReport.h  qtMapCoordinatesWidget.cxx  qtMapCoordinatesWidget.h  qtMapCoordinatesWidget.ui  qtWSMapMainWindow.cxx  qtWSMapMainWindow.h  qtWeatherStations.cxx  qtWeatherStations.h  qtWeatherStations.ui  wsmap.cxx
Testing/: CMakeLists.txt  TestGDALRaster.cxx  TestGDALRasterConverter.cxx  TestGeoJSON.cxx  TestMapClustering.cxx  TestMultiThreadedOsmLayer.cxx  TestOsmLayer.cxx  TestParallelProjection.cxx  TestRasterReprojectionFilter.cxx  TestRemoveLayer.cxx
Testing/Data/: ny-multilinestring.geojson  ny-points.geojson  ny-polygon.geojson  sa052483.tif  spec-example.json
applications/examples/: CMakeLists.txt  example.cxx  exampleLayers.cxx  markerSize.cxx
applications/weatherstations/: CMakeLists.txt  RenderWindowNoUiFile.cxx  StationReport.h  qtMapCoordinatesWidget.cxx  qtMapCoordinatesWidget.h  qtMapCoordinatesWidget.ui  qtWeatherStations.cxx  qtWeatherStations.h  wsmap.cxx
assets/: CMakeLists.txt  displaymarkers.py  hexagon.vtk  image2h.py  markersShadowImageData.h  octagon.vtk  pentagon.vtk  pointMarkerPolyData.vtk  square.vtk  teardrop.vtk  tile-not-available.xcf  tileNotAvailable_png.h  triangle.vtk
core/: CMakeLists.txt  Timer.h  vtkFeature.cxx  vtkFeature.h  vtkFeatureLayer.cxx  vtkFeatureLayer.h  vtkGeoMapFeatureSelector.cxx  vtkGeoMapFeatureSelector.h  vtkGeoMapLayerPass.cxx  vtkGeoMapLayerPass.h  vtkGeoMapSelection.cxx  vtkGeoMapSelection.h  vtkInteractorStyleGeoMap.cxx  vtkInteractorStyleGeoMap.h  vtkLayer.cxx  vtkLayer.h  vtkMap.cxx  vtkMap.h  vtkMapMarkerSet.cxx  vtkMapMarkerSet.h  vtkMapPointSelection.cxx  vtkMapPointSelection.h  vtkMapTile.cxx  vtkMapTile.h  vtkMapTileSpecInternal.h  vtkMap_typedef.h  vtkMemberFunctionCommand.h  vtkMercator.h  vtkMultiThreadedOsmLayer.cxx  vtkMultiThreadedOsmLayer.h  vtkOsmLayer.cxx  vtkOsmLayer.h  vtkPolydataFeature.cxx  vtkPolydataFeature.h  vtkRasterFeature.cxx  vtkRasterFeature.h  vtkTeardropSource.cxx  vtkTeardropSource.h
extensions/GDAL/: CMakeLists.txt  vtkGDALRasterConverter.h  vtkGDALRasterFeature.cxx  vtkGDALRasterFeature.h  vtkGDALRasterReprojection.cxx  vtkGDALRasterReprojection.h  vtkRasterReprojectionFilter.cxx  vtkRasterReprojectionFilter.h
extensions/GeoJSON/: CMakeLists.txt  vtkGeoJSONMapFeature.cxx  vtkGeoJSONMapFeature.h
testing/: CMakeLists.txt  TestGDALRaster.cxx  TestGDALRasterConverter.cxx  TestGeoJSON.cxx  TestMapClustering.cxx  TestMultiThreadedOsmLayer.cxx  TestOsmLayer.cxx  TestRemoveLayer.cxx
utilities/: pre-commit_clang-format
